Begin css wrangling

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
 							<h1>Next Level Goaltending</h1>
 							<p>Modernia salibandymaalivahtivalmennusta.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Lue lisää</a></li>
 							</ul>
 						</div>
 					</section>
