Write some text

--- a/public/index.html
+++ b/public/index.html
@@ -21,10 +21,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro">Next Level Goaltending</a></li>
+							<li><a href="#two">Filosofia</a></li>
+							<li><a href="#one">Tekijät</a></li>
+							<li><a href="#three">Yhteystiedot</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -39,7 +39,90 @@
 							<h1>Next Level Goaltending</h1>
 							<p>Modernia salibandymaalivahtivalmennusta.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Lue lisää</a></li>
+								<li><a href="#two" class="button scrolly">Tutustu filosofiaamme</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper style3 fade-up">
+						<div class="inner">
+							<h2>Filosofia</h2>
+							<p>
+								Next Level Goaltending opettaa moderniin, nopeatempoiseen salibandyyn
+								optimoitua maalivahtitekniikkaa. Filosofiassamme maalivahdin tärkein
+								tehtävä on <b>torjunnan todennäköisyyden maksimointi</b> - kaikkien
+								maaliviahtien tekojen kentällä pitää johtaa torjunnan todennäköisyyden
+								maksimointiin pitkällä aikajänteellä. Alla filosofiaamme on eritelty
+								tarkemmin.
+							</p>
+							<div class="features">
+								<section>
+									<span class="icon major fa-code"></span>
+									<h3>Torjunnan todennäköisyyden maksimointi</h3>
+									<p>
+										Salibandy on peli, jossa syntyy paljon maaleja ja kaikkia
+										ei paraskaan maalivahti voi estää. Tärkeintä on pelata kaikki
+										tilanteet siten, että torjunnan todennäköisyys on mahdollisimman
+										suuri. Näin pelatessa maalivahdin uran aikana maalivahdille
+										syntyy vähiten maaleja.
+									</p>
+								</section>
+								<section>
+									<span class="icon major fa-lock"></span>
+									<h3>Tuloksen erottaminen toiminnasta</h3>
+									<p>
+										Aina oikeita asioita tekemällä ei saavuteta haluttua tulosta.
+										Maalivahtipelin kontekstissa tämä tarkoittaa sitä, että vaikka
+										maalivahti pelaisi parhaalla mahdollisella tavalla, maali
+										saattaa silti syntyä. Käänteisesti, epäoptimaalisella pelillä
+										voi myös onnistua torjunnassa. Maalivahdin tekemistä arvioidessa
+										täysyy siis kyetä erottamaan hyvä ja huono toiminta tuloksesta
+										riippumatta.
+									</p>
+								</section>
+								<section>
+									<span class="icon major fa-cog"></span>
+									<h3>Tehokkaat liikkeet kentällä</h3>
+									<p>
+										Jotta maalivahti voi maksimoida torjunnan todennäköisyyden,
+										täytyy maalivahdin liikkeiden suuntautua sekä koko kehon liikkeen
+										että reaktioiden osalta suorinta tietä kohti palloa tai
+										tilannetta.
+									</p>
+								</section>
+								<section>
+									<span class="icon major fa-desktop"></span>
+									<h3>Pelin lukeminen ja ymmärtäminen</h3>
+									<p>
+										Peliä lukemalla maalivahti arvioi, mihin seuraava todennäköinen
+										maalintekotilanne syntyy. Lukemalla ja ymmärtämälle pelin tilanteita
+										ja virtausta maalivahti voi valita sopivimmat tekniikat kulloiseenkin
+										tilanteeseen.
+									</p>
+								</section>
+								<section>
+									<span class="icon major fa-chain"></span>
+									<h3>Symmetrinen tekniikka ja valintojen mahdollistaminen</h3>
+									<p>
+										Tilanteita salibandykentällä syntyy kaikkialta. Maalivahtien
+										täytyy pysytä valitsemaan kaikkiin tilanteisiin sopivin tekniikka,
+										mistä seuraa että maalivahdin tekniikan tulee olla symmetrinen.
+										Hyvät maalivahdit tekevät mitä osaavat, parhaat mitä haluavat.
+									</p>
+								</section>
+								<section>
+									<span class="icon major fa-diamond"></span>
+									<h3>Aktiivinen peliin osallistuminen</h3>
+									<p>
+										Maalivahdin ei tarvitse vain odottaa maalillaan pelin luoksetuloa -
+										avaukset, syöttöjen katkot ja aktiivinen puolusuksen ohjaaminen
+										kuuluvat taitavan maalivahdin repertuaariin.
+									</p>
+								</section>
+							</div>
+							<ul class="actions">
+								<li><a href="#one" class="button">Jatka lukemista</a></li>
 							</ul>
 						</div>
 					</section>
@@ -82,49 +165,6 @@
 								</div>
 							</div>
 						</section>
-					</section>
-
-				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
-						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="features">
-								<section>
-									<span class="icon major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
-								</section>
-							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
-						</div>
 					</section>
 
 				<!-- Three -->
