--- a/public/index.html
+++ b/public/index.html
@@ -129,36 +129,65 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
+						<section class="wrapper style2">
+							<div class="inner">
+								<h2>Tekijät</h2>
+								<p>
+									Next Level Goaltendingin taustalla toimii nykyisiä ja entisiä
+									paasärjatason maalivahteja. Yhteenlaskettuna Next Level
+									Goaltendingin valmentajilla on yli kahdeksansadan pääsarjaottelun
+									ja yli vuosikymmenen maalivahtivalmennuksen kokemus.
+								</p>
+								<p>
+									Valmentajien lisäksi Next Level Goaltendingin tapahtumiin osallistuu
+									aktiivimaalivahteja Salibandyliigasta kun aikataulut sopivat
+									ja tapahtuma siitä hyötyy.
+								</p>
+								<p>
+									Alla on esitelty Next Level Goaltedingin päätekijät.
+								</p>
+							</div>
+						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/keksi.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
+									<h2>Tommi Kekkonen</h2>
+									<p>
+										Tommi 'Keksi' Kekkonen on ylipainostaan huolimatta kokenut
+										pääsarjatason maalivahti. SSV:ssä, Oilersissa, Indiansissa
+										ja TPS:ssä pelannut kehäkettu painottaa valmennuksessaan
+										rauhallisuutta ja älykästä pelinlukua. Keksi ryhtyi valmentamaan
+										maalivahteja jo kuusi vuotta sitten ja toimii tällä hetkellä
+										Esport Oilersin maalivahtivalmennuskoordinaattorina.
+									</p>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/vijo.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
+									<h2>Ville Jokinen</h2>
+									<p>
+										Oilersissa ja Indiansissa pitkän pelaajauran tehnyt Ville on
+										jo kokenut maalivahtivalmentaja (Goalie Base, Goalie Clinic).
+										Tällä hetkellä Ville vastaa myös kokonaisuudessaan Westend
+										Indiansin maalivahtivalmennuksesta.
+									</p>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/miro.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Miro Nurmela</h2>
+									<p>
+										Next Level Goaltendinging nuorin valmentaja Miro pelasi Westend
+										Indiansin ja PSS:n riveissä miesten pääsarjoissa. Tällä hetkellä
+										Nurmela toimii Esport Oilersin A ja B -junioreiden maalivahtivalmentajana.
+									</p>
 									<ul class="actions">
 										<li><a href="#" class="button">Learn more</a></li>
 									</ul>
