Camp notification stuff

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 							<li><a href="#two">Filosofia</a></li>
 							<li><a href="#one">Tekijät</a></li>
 							<li><a href="#three">Yhteystiedot</a></li>
+							<li><a href="#camp">Kisakallion leiri</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -40,6 +41,7 @@
 							<p>Modernia salibandymaalivahtivalmennusta.</p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">Tutustu filosofiaamme</a></li>
+								<li><a href="#camp" class="button scrolly">Kisakallion leiri</a></li>
 							</ul>
 						</div>
 					</section>
@@ -188,13 +190,27 @@
 										Indiansin ja PSS:n riveissä miesten pääsarjoissa. Tällä hetkellä
 										Nurmela toimii Esport Oilersin A ja B -junioreiden maalivahtivalmentajana.
 									</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
-									</ul>
 								</div>
 							</div>
 						</section>
 					</section>
+
+				<section id="camp" class="wrapper style3 fade-up">
+					<div class="inner">
+						<h2>Leiri (aika tähän)</h2>
+						<p>
+							Next Level Goaltending järjestää leirin (aika tässä). Leiri on
+							suunnattu juonioreille C-ikäluokasta (2001-2002) syntyneet
+							ylöspäin aina A-junioreihin asti. Leiri järjestetään kisakalliossa,
+							ja kahden päivän ohjelmaan kuuluu teorialuentoja, video-opetusta
+							ja tärkeimpänä lähiopetusta pienryhmissä.
+						</p>
+						<p>
+							Leiri hinta on 130 euroa koko viikonlopulta, ja se sisältää majoituksen,
+							ruokailut, salivuorot ja valmennuksen.
+						</p>
+					</div>
+				</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
