--- a/public/index.html
+++ b/public/index.html
@@ -206,6 +206,11 @@
 							ja tärkeimpänä lähiopetusta pienryhmissä.
 						</p>
 						<p>
+							Next Level Goaltendingin valmentajien lisäksi leirille ohjaajana
+							osallistuvat liiga- ja maajoukkuevahdit Joonas Kaltiainen ja
+							Pyry Luukkonen.
+						</p>
+						<p>
 							Leiri hinta on 130 euroa koko viikonlopulta, ja se sisältää majoituksen,
 							ruokailut, salivuorot ja valmennuksen.
 						</p>
