--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 							</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
+									<span class="icon major fa-star"></span>
 									<h3>Torjunnan todennäköisyyden maksimointi</h3>
 									<p>
 										Salibandy on peli, jossa syntyy paljon maaleja ja kaikkia
@@ -71,7 +71,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="icon major fa-star"></span>
 									<h3>Tuloksen erottaminen toiminnasta</h3>
 									<p>
 										Aina oikeita asioita tekemällä ei saavuteta haluttua tulosta.
@@ -84,7 +84,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major fa-cog"></span>
+									<span class="icon major fa-star"></span>
 									<h3>Tehokkaat liikkeet kentällä</h3>
 									<p>
 										Jotta maalivahti voi maksimoida torjunnan todennäköisyyden,
@@ -94,7 +94,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
+									<span class="icon major fa-star"></span>
 									<h3>Pelin lukeminen ja ymmärtäminen</h3>
 									<p>
 										Peliä lukemalla maalivahti arvioi, mihin seuraava todennäköinen
@@ -104,7 +104,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major fa-chain"></span>
+									<span class="icon major fa-star"></span>
 									<h3>Symmetrinen tekniikka ja valintojen mahdollistaminen</h3>
 									<p>
 										Tilanteita salibandykentällä syntyy kaikkialta. Maalivahtien
@@ -114,7 +114,7 @@
 									</p>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
+									<span class="icon major fa-star"></span>
 									<h3>Aktiivinen peliin osallistuminen</h3>
 									<p>
 										Maalivahdin ei tarvitse vain odottaa maalillaan pelin luoksetuloa -
