--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 							<li><a href="#intro">Next Level Goaltending</a></li>
 							<li><a href="#two">Filosofia</a></li>
 							<li><a href="#one">Tekijät</a></li>
-							<li><a href="#camp">Kisakallion leiri</a></li>
+							<li><a href="#camp">Ajankohtaista</a></li>
 							<li><a href="#three">Yhteystiedot</a></li>
 						</ul>
 					</nav>
@@ -41,7 +41,7 @@
 							<p>Modernia salibandymaalivahtivalmennusta.</p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">Tutustu filosofiaamme</a></li>
-								<li><a href="#camp" class="button scrolly">Kisakallion leiri</a></li>
+								<li><a href="#camp" class="button scrolly">Ajankohtaista</a></li>
 							</ul>
 						</div>
 					</section>
@@ -197,7 +197,9 @@
 
 				<section id="camp" class="wrapper style3 fade-up">
 					<div class="inner">
-						<h2>Leiri (aika tähän)</h2>
+						<h2>Next Level -maalivahtileiri</h2>
+						<div class="camp-picture">
+						</div>
 						<p>
 							Next Level Goaltending järjestää leirin (aika tässä). Leiri on
 							suunnattu juonioreille C-ikäluokasta (2001-2002) syntyneet
