--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,10 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Next Level Goaltending</h1>
-							<p>Modernia salibandymaalivahtivalmennusta.</p>
+							<p>
+								Modernia salibandymaalivahtivalmennusta maalivahdeille ja
+								maalivahtivalmentajille.
+							</p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">Tutustu filosofiaamme</a></li>
 								<li><a href="#camp" class="button scrolly">Ajankohtaista</a></li>
@@ -52,7 +55,8 @@
 							<h2>Filosofia</h2>
 							<p>
 								Next Level Goaltending opettaa moderniin, nopeatempoiseen salibandyyn
-								optimoitua maalivahtitekniikkaa. Filosofiassamme maalivahdin tärkein
+								optimoitua maalivahtitekniikkaa. Tavoitteenamme on opettaa sekä
+								maalivahteja että maalivahtivalmentajia. Filosofiassamme maalivahdin tärkein
 								tehtävä on <b>torjunnan todennäköisyyden maksimointi</b> - kaikkien
 								maaliviahtien tekojen kentällä pitää johtaa torjunnan todennäköisyyden
 								maksimointiin pitkällä aikajänteellä. Alla filosofiaamme on eritelty
@@ -151,7 +155,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/keksi.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image disabled"><img src="images/keksi.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Tommi Kekkonen</h2>
@@ -167,7 +171,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/vijo.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image disabled"><img src="images/vijo.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ville Jokinen</h2>
@@ -181,7 +185,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/miro.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image disabled"><img src="images/miro.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Miro Nurmela</h2>
@@ -199,22 +203,45 @@
 					<div class="inner">
 						<h2>Next Level -maalivahtileiri</h2>
 						<div class="camp-picture">
+							<a href="#" class="image disabled fit"><img src="images/group.jpg" alt="" data-position="top center" /></a>
 						</div>
 						<p>
-							Next Level Goaltending järjestää leirin (aika tässä). Leiri on
-							suunnattu juonioreille C-ikäluokasta (2001-2002) syntyneet
-							ylöspäin aina A-junioreihin asti. Leiri järjestetään kisakalliossa,
-							ja kahden päivän ohjelmaan kuuluu teorialuentoja, video-opetusta
-							ja tärkeimpänä lähiopetusta pienryhmissä.
+							Maalivahtileiri on suunnattu -02 ja sitä aiemmin syntyneille lajin
+							perusteet hallitseville salibandymaalivahdeille. Leirillä
+							maalivahtipeliä lähestytään teknisen ja taktisen pelinymmärryksen
+							näkökulmasta. Tavoitteena on käytännön esimerkkien kautta
+							havainnollistaa, mikä on paras liikkumis- ja torjuntatyyli eri
+							tilanteisiin silloin, kun maalivahti pelaa korkeimmalla tasolla.
+							Salibandyliigan ehdottomat huippunimet Pyry Luukkonen ja Joonas
+							Kaltiainen vierailevat leirillä kertomassa, mitä maajoukkuetason
+							salibandymaalivahti huomioi pelaamisessaan.
 						</p>
 						<p>
-							Next Level Goaltendingin valmentajien lisäksi leirille ohjaajana
-							osallistuvat liiga- ja maajoukkuevahdit Joonas Kaltiainen ja
-							Pyry Luukkonen.
+							Leirin valmentajilla on pitkä kokemus maalivahtipelaamisesta
+							ylimmillä sarjatasoilla sekä ammattimainen ja analyyttinen ote
+							maalivahtivalmennukseen. Next Level Goaltendingin valmentajista
+							leirillä toimii Ville Jokinen (Westend Indians, Goalie Clinic),
+							Tommi Kekkonen (Esport Oilers, T-Kex Technology) ja Miro Nurmela
+							(Esport Oilers).
 						</p>
 						<p>
-							Leiri hinta on 130 euroa koko viikonlopulta, ja se sisältää majoituksen,
-							ruokailut, salivuorot ja valmennuksen.
+							<b>Aika:</b> 17-18.6.2017. Leiri alkaa lauantaina klo 13.00 ja
+							päättyy sunnuntaina klo 13.00.
+						</p>
+						<p>
+							<b>Paikka:</b> Kisakallion urheiluopisto, Kisakalliontie 284, 08360 Lohja.
+						</p>
+						<p>
+							<b>Hinta:</b> 130€, sisältäen ohjauksen ja opetuksen sekä majoituksen ja
+							ruokailut. Paikkoja on rajoitetusti, joten ilmoittaudu mukaan pian: www.xxxx.
+						</p>
+						<p>
+							<b>HUOM!</b> Ilmoittautumisessa tarvittavat tiedot: nimi, seura,
+							syntymäaika, osoite sekä huoltajan nimi sekä puhelinnumero.
+						</p>
+						<p>
+							Osallistujalla tulee olla voimassaoleva lisenssivakuutus tai
+							Salibandyliiton hyväksymä oma tapaturmavakuutus.
 						</p>
 					</div>
 				</section>
