Content modifications and poster on the site

--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,9 @@
 							(Esport Oilers).
 						</p>
 						<p>
+							<a href="posters/next_level_camp.pdf">Lataa leirin esite tästä.</a>
+						</p>
+						<p>
 							<b>Aika:</b> 17-18.6.2017. Leiri alkaa lauantaina klo 13.00 ja
 							päättyy sunnuntaina klo 13.00.
 						</p>
