--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,13 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Next Level Goaltending</h1>
+						</div>
+					</section>
+
+				<!-- Two -->
+
+					<section id="intro-text" class="wrapper style1 fade-up">
+						<div class="inner">
 							<p>
 								Modernia salibandymaalivahtivalmennusta maalivahdeille ja
 								maalivahtivalmentajille.
@@ -49,7 +55,6 @@
 						</div>
 					</section>
 
-				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Filosofia</h2>
@@ -94,7 +99,8 @@
 										Jotta maalivahti voi maksimoida torjunnan todennäköisyyden,
 										täytyy maalivahdin liikkeiden suuntautua sekä koko kehon liikkeen
 										että reaktioiden osalta suorinta tietä kohti palloa tai
-										tilannetta.
+										tilannetta. Lyhimmät liikkeet ja optimaaliset liikeradat
+										johdetaan yksinkertaisin matemaattisin ja fyysisin mallein.
 									</p>
 								</section>
 								<section>
