--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<meta name="google-site-verification" content="R--iSn3Vt0wuc612l1Qw_JqENSbFehS8AnVqRiacIIg" />
 	</head>
 	<body>
 
