Slight more towards production updates

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 						<ul>
 							<li><a href="#intro">Next Level Goaltending</a></li>
 							<li><a href="#two">Filosofia</a></li>
+							<li><a href="#services">Palvelut</a></li>
 							<li><a href="#one">Tekijät</a></li>
 							<li><a href="#camp">Ajankohtaista</a></li>
 							<li><a href="#three">Yhteystiedot</a></li>
@@ -140,6 +141,21 @@
 						</div>
 					</section>
 
+					<section id="services" class="wrapper style1 fade-up">
+						<div class="inner">
+							<h2>Palvelut</h2>
+							<p>
+								Haluamme tarjota seurallenne juuri teidän tarpeisiinne sopivaa
+								valmennusta. Valmennusmallimme perustuu siihen, että seurastanne
+								löytyy maalivahtivalmennuksesta ja sen kehittämisestä kiinnostuneita
+								henkilöitä. Maalivahtivalmentajan kokemuksella ei ole väliä -
+								koulutamme niin aloittelevia kuin kokeneempia maalivahtivalmentajia.
+								Räätälöidyssä yhteistyössä mv-valmentajien kanssa autamme seuranne
+								maalivahteja kehittymään seuraavalle tasolle.
+							</p>
+
+					</section>
+
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section class="wrapper style2">
@@ -178,7 +194,6 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image disabled"><img src="images/vijo.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ville Jokinen</h2>
@@ -190,6 +205,7 @@
 									</p>
 								</div>
 							</div>
+							<a href="#" class="image disabled"><img src="images/vijo.jpg" alt="" data-position="top center" /></a>
 						</section>
 						<section>
 							<a href="#" class="image disabled"><img src="images/miro.jpg" alt="" data-position="25% 25%" /></a>
