--- a/public/index.html
+++ b/public/index.html
@@ -62,10 +62,10 @@
 							<h2>Filosofia</h2>
 							<p>
 								Next Level Goaltending opettaa moderniin, nopeatempoiseen salibandyyn
-								optimoitua maalivahtitekniikkaa. Tavoitteenamme on opettaa sekä
+								optimoitua maalivahtipelaamista. Tavoitteenamme on kouluttaa sekä
 								maalivahteja että maalivahtivalmentajia. Filosofiassamme maalivahdin tärkein
 								tehtävä on <b>torjunnan todennäköisyyden maksimointi</b> - kaikkien
-								maaliviahtien tekojen kentällä pitää johtaa torjunnan todennäköisyyden
+								maalivahtien tekojen kentällä pitää johtaa torjunnan todennäköisyyden
 								maksimointiin pitkällä aikajänteellä. Alla filosofiaamme on eritelty
 								tarkemmin.
 							</p>
@@ -145,13 +145,22 @@
 						<div class="inner">
 							<h2>Palvelut</h2>
 							<p>
+								Next Level Goaltendingin pääasiallinen tavoite on kehittää
+								maalivahteja ja maalivahtivalmennusta seuratasolla.
+							</p>
+							<p>
 								Haluamme tarjota seurallenne juuri teidän tarpeisiinne sopivaa
 								valmennusta. Valmennusmallimme perustuu siihen, että seurastanne
 								löytyy maalivahtivalmennuksesta ja sen kehittämisestä kiinnostuneita
 								henkilöitä. Maalivahtivalmentajan kokemuksella ei ole väliä -
 								koulutamme niin aloittelevia kuin kokeneempia maalivahtivalmentajia.
 								Räätälöidyssä yhteistyössä mv-valmentajien kanssa autamme seuranne
-								maalivahteja kehittymään seuraavalle tasolle.
+								maalivahteja kehittymään <i>seuraavalle tasolle</i>.
+							</p>
+							<p>
+								Jos kiinnostuit tai sinulla on kysyttävää palveluistamme,
+								lisätietoja ja keskustelua voit käydä osoitteessa
+								<a href="mailto:info@nextlevelgoaltending.fi">info@nextlevelgoaltending.fi</a>.
 							</p>
 
 					</section>
