--- a/public/index.html
+++ b/public/index.html
@@ -268,13 +268,17 @@
 						</p>
 						<p>
 							<b>Hinta:</b> 130€, sisältäen ohjauksen ja opetuksen sekä majoituksen ja
-							ruokailut. Paikkoja on rajoitetusti, joten ilmoittaudu mukaan pian: www.xxxx.
+							ruokailut.
 						</p>
 						<p>
-							<b>HUOM!</b> Ilmoittautumisessa tarvittavat tiedot: nimi, seura,
+							<b>Ilmoittautuminen:</b> sähköpostilla osoitteeseen
+							<a href="mailto:info@nextlevelgoaltending.fi">info@nextlevelgoaltending.fi</a>.
+							Ilmoittautumisessa tarvittavat tiedot: nimi, seura,
 							syntymäaika, osoite sekä huoltajan nimi sekä puhelinnumero.
+							Paikkoja on rajoitetusti, joten ilmoittaudu mukaan pian!
 						</p>
 						<p>
+							<b>HUOM!</b>
 							Osallistujalla tulee olla voimassaoleva lisenssivakuutus tai
 							Salibandyliiton hyväksymä oma tapaturmavakuutus.
 						</p>
@@ -289,7 +293,7 @@
 								<ul class="contact">
 									<li>
 										<h3>Sähköposti</h3>
-										<a href="mailto:someone@example.com">joku@maili</a>
+										<a href="mailto:info@nextlevelgoaltending.fi">info@nextlevelgoaltending.fi</a>
 									</li>
 									<li>
 										<h3>Puhelin</h3>
