--- a/public/index.html
+++ b/public/index.html
@@ -174,7 +174,8 @@
 									Next Level Goaltendingin taustalla toimii nykyisiä ja entisiä
 									paasärjatason maalivahteja. Yhteenlaskettuna Next Level
 									Goaltendingin valmentajilla on yli kahdeksansadan pääsarjaottelun
-									ja yli vuosikymmenen maalivahtivalmennuksen kokemus.
+									ja yli vuosikymmenen maalivahtivalmennuksen ja akateemisen
+									koulutuksen kokemus.
 								</p>
 								<p>
 									Valmentajien lisäksi Next Level Goaltendingin tapahtumiin osallistuu
@@ -199,6 +200,14 @@
 										maalivahteja jo kuusi vuotta sitten ja toimii tällä hetkellä
 										Esport Oilersin maalivahtivalmennuskoordinaattorina.
 									</p>
+									<h4>Pikaprofiili</h4>
+									<ul>
+										<li>Mitat: pituus 180cm, paino 90kg</li>
+										<li>Valmentajana: "T-Kex Method" mm. Oilers, TPS, GrIFK, Rangers</li>
+										<li>Pelaajana: mm. Oilers, TPS, Classic, Indians, HIFK</li>
+										<li>Vahvuudet: pelinluku, psyykkinen urheilullisuus</li>
+										<li>Koulutus: Materiaalitekniikan diplomi-insinööri</li>
+									</ul>
 								</div>
 							</div>
 						</section>
@@ -212,6 +221,14 @@
 										Tällä hetkellä Ville vastaa myös kokonaisuudessaan Westend
 										Indiansin maalivahtivalmennuksesta.
 									</p>
+									<h4>Pikaprofiili</h4>
+									<ul>
+										<li>Mitat: pituus 178 cm, paino 75 kg</li>
+										<li>Valmentajana: Westend Indians, Goalie Clinic, Goalie Base</li>
+										<li>Pelaajana: Espoon Oilers, Tapanilan Erä,  Westend Indians, PSS</li>
+										<li>Vahvuudet: monipuolinen tekniikka, analyyttisyys</li>
+										<li>Koulutus: Elintarviketieteiden maisteri, Helsingin Yliopisto</li>
+									</ul>
 								</div>
 							</div>
 							<a href="#" class="image disabled"><img src="images/vijo.jpg" alt="" data-position="top center" /></a>
@@ -223,9 +240,19 @@
 									<h2>Miro Nurmela</h2>
 									<p>
 										Next Level Goaltendinging nuorin valmentaja Miro pelasi Westend
-										Indiansin ja PSS:n riveissä miesten pääsarjoissa. Tällä hetkellä
+										Indiansin ja PSS:n riveissä miesten pääsarjoissa. Next Level
+										Goaltendingin valmnnusfilosofiaan Miro on tuonut peliteoreettista
+										ja matemaattista lähestymistapaa. Tällä hetkellä
 										Nurmela toimii Esport Oilersin A ja B -junioreiden maalivahtivalmentajana.
 									</p>
+									<h4>Pikaprofiili</h4>
+									<ul>
+										<li>Mitat: pituus 178cm, paino 70kg</li>
+										<li>Valmentajana: Esport Oilers</li>
+										<li>Pelaajana: Westend Indians, PSS</li>
+										<li>Vahvuudet: liikkumistekniikka, peliteoria</li>
+										<li>Koulutus: Tietotekniikan diplomi-insinööri</li>
+									</ul>
 								</div>
 							</div>
 						</section>
