--- a/public/index.html
+++ b/public/index.html
@@ -299,7 +299,7 @@
 						</p>
 						<p>
 							<b>Ilmoittautuminen:</b> sähköpostilla osoitteeseen
-							<a href="mailto:info@nextlevelgoaltending.fi">info@nextlevelgoaltending.fi</a>.
+							<a href="mailto:ilmoittautuminen@nextlevelgoaltending.fi">ilmoittautuminen@nextlevelgoaltending.fi</a>.
 							Ilmoittautumisessa tarvittavat tiedot: nimi, seura,
 							syntymäaika, osoite sekä huoltajan nimi sekä puhelinnumero.
 							Paikkoja on rajoitetusti, joten ilmoittaudu mukaan pian!
