--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,7 @@
 									<p>
 										Next Level Goaltendinging nuorin valmentaja Miro pelasi Westend
 										Indiansin ja PSS:n riveissä miesten pääsarjoissa. Next Level
-										Goaltendingin valmnnusfilosofiaan Miro on tuonut peliteoreettista
+										Goaltendingin valmennusfilosofiaan Miro on tuonut peliteoreettista
 										ja matemaattista lähestymistapaa. Tällä hetkellä
 										Nurmela toimii Esport Oilersin A ja B -junioreiden maalivahtivalmentajana.
 									</p>
