--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 										maalivahti pelaisi parhaalla mahdollisella tavalla, maali
 										saattaa silti syntyä. Käänteisesti, epäoptimaalisella pelillä
 										voi myös onnistua torjunnassa. Maalivahdin tekemistä arvioidessa
-										täysyy siis kyetä erottamaan hyvä ja huono toiminta tuloksesta
+										täytyy siis kyetä erottamaan hyvä ja huono toiminta tuloksesta
 										riippumatta.
 									</p>
 								</section>
@@ -110,7 +110,7 @@
 									<h3>Pelin lukeminen ja ymmärtäminen</h3>
 									<p>
 										Peliä lukemalla maalivahti arvioi, mihin seuraava todennäköinen
-										maalintekotilanne syntyy. Lukemalla ja ymmärtämälle pelin tilanteita
+										maalintekotilanne syntyy. Lukemalla ja ymmärtämällä pelin tilanteita
 										ja virtausta maalivahti voi valita sopivimmat tekniikat kulloiseenkin
 										tilanteeseen.
 									</p>
@@ -120,7 +120,7 @@
 									<h3>Symmetrinen tekniikka ja valintojen mahdollistaminen</h3>
 									<p>
 										Tilanteita salibandykentällä syntyy kaikkialta. Maalivahtien
-										täytyy pysytä valitsemaan kaikkiin tilanteisiin sopivin tekniikka,
+										täytyy pystyä valitsemaan kaikkiin tilanteisiin sopivin tekniikka,
 										mistä seuraa että maalivahdin tekniikan tulee olla symmetrinen.
 										Hyvät maalivahdit tekevät mitä osaavat, parhaat mitä haluavat.
 									</p>
@@ -130,7 +130,7 @@
 									<h3>Aktiivinen peliin osallistuminen</h3>
 									<p>
 										Maalivahdin ei tarvitse vain odottaa maalillaan pelin luoksetuloa -
-										avaukset, syöttöjen katkot ja aktiivinen puolusuksen ohjaaminen
+										avaukset, syöttöjen katkot ja aktiivinen puolustuksen ohjaaminen
 										kuuluvat taitavan maalivahdin repertuaariin.
 									</p>
 								</section>
@@ -193,7 +193,7 @@
 								<div class="inner">
 									<h2>Tommi Kekkonen</h2>
 									<p>
-										Tommi 'Keksi' Kekkonen on ylipainostaan huolimatta kokenut
+										Tommi 'Keksi' Kekkonen on kokenut
 										pääsarjatason maalivahti. SSV:ssä, Oilersissa, Indiansissa
 										ja TPS:ssä pelannut kehäkettu painottaa valmennuksessaan
 										rauhallisuutta ja älykästä pelinlukua. Keksi ryhtyi valmentamaan
@@ -228,7 +228,7 @@
 										<li>Valmentajana: Westend Indians, Goalie Clinic, Goalie Base</li>
 										<li>Pelaajana: Espoon Oilers, Tapanilan Erä,  Westend Indians, PSS</li>
 										<li>Vahvuudet: monipuolinen tekniikka, analyyttisyys</li>
-										<li>Koulutus: Elintarviketieteiden maisteri, Helsingin Yliopisto</li>
+										<li>Koulutus: Elintarviketieteiden maisteri, Helsingin yliopisto</li>
 									</ul>
 								</div>
 							</div>
@@ -239,11 +239,12 @@
 								<div class="inner">
 									<h2>Miro Nurmela</h2>
 									<p>
-										Next Level Goaltendinging nuorin valmentaja Miro pelasi Westend
+										Next Level Goaltendingin nuorin valmentaja Miro pelasi Westend
 										Indiansin ja PSS:n riveissä miesten pääsarjoissa. Next Level
 										Goaltendingin valmennusfilosofiaan Miro on tuonut peliteoreettista
 										ja matemaattista lähestymistapaa. Tällä hetkellä
-										Nurmela toimii Esport Oilersin A ja B -junioreiden maalivahtivalmentajana.
+										Nurmela toimii Esport Oilersin A ja B -junioreiden
+										maalivahtivalmentajana.
 									</p>
 									<h4>Pikaprofiili</h4>
 									<ul>
@@ -324,7 +325,7 @@
 									</li>
 									<li>
 										<h3>Puhelin</h3>
-										<span>joku numero</span>
+										<span><a href="tel:+358503508820">+35850 350 8820</a></span>
 									</li>
 								</ul>
 							</section>
