--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<meta name="google-site-verification" content="R--iSn3Vt0wuc612l1Qw_JqENSbFehS8AnVqRiacIIg" />
+		<link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 	</head>
 	<body>
 
