Slight updates to texts

--- a/public/index.html
+++ b/public/index.html
@@ -219,7 +219,7 @@
 										Oilersissa ja Indiansissa pitkän pelaajauran tehnyt Ville on
 										jo kokenut maalivahtivalmentaja (Goalie Base, Goalie Clinic).
 										Tällä hetkellä Ville vastaa myös kokonaisuudessaan Westend
-										Indiansin maalivahtivalmennuksesta.
+										Indiansin maalivahtivalmennuksesta ja monien muiden joukkueiden maalivahdeista.
 									</p>
 									<h4>Pikaprofiili</h4>
 									<ul>
@@ -241,9 +241,7 @@
 										Next Level Goaltendingin nuorin valmentaja Miro pelasi Westend
 										Indiansin ja PSS:n riveissä miesten pääsarjoissa. Next Level
 										Goaltendingin valmennusfilosofiaan Miro on tuonut peliteoreettista
-										ja matemaattista lähestymistapaa. Tällä hetkellä
-										Nurmela toimii Esport Oilersin A ja B -junioreiden
-										maalivahtivalmentajana.
+										ja matemaattista lähestymistapaa.
 									</p>
 									<h4>Pikaprofiili</h4>
 									<ul>
